--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 }
 
 .container {
-    margin-top: 10%;
+    margin-top: 5%;
     width: 100%;
     height: 100%;
 }
@@ -23,7 +23,10 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
-
+.shopNow{
+    text-decoration: none;
+    color:black ;
+}
 .category-link {
     height: 100%;
     background-image: linear-gradient(to right, black, rgba(0, 0, 0, 0));
@@ -33,4 +36,13 @@
 
 .alert-box{
     z-index: 10;
+}
+
+.active{
+    background-image:linear-gradient(to bottom, rgba(138, 202, 255, 0.265), rgba(255, 255, 255, 0));
+    border-top-right-radius: 0.3rem;
+    border-top-left-radius: 0.3rem;
+    color: cornflowerblue;
+    padding-left: 3rem;
+    padding-right: 3rem;
 }
