--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
 
 .homeDisplay {
     height: 100vh;
-    background-image: url(./../homePage.jpg);
+    background-image: url(./homePage.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
